# crypto-playground

./: .gitignore  best_model.pth  last_model.pth  mnist.ipynb  pailler.ipynb  pyproject.toml
cluster/: interactive.slurm
src/crypto/: utils.py
src/crypto/modules/: mlp.py  pailler_mlp.py
