[project]
name = "crypto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "livelossplot>=0.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "phe>=1.5.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]


[tool.setuptools]
package-dir = {"" = "src"}
packages = ["crypto"]

[tool.uv.sources]
crypto = { workspace = true }
